parse/msgennyparser.js
define ([], function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = function(pre, d) {
                d[1] = extractUndeclaredEntities(d[1], d[2]);
                var lRetval = merge (d[0], merge (d[1], d[2]));

                lRetval = merge ({meta: getMetaInfo(d[0], d[2])}, lRetval);

                if (pre.length > 0) {
                    lRetval = merge({precomment: pre}, lRetval);
                }
                /*
                    if (post.length > 0) {
                        lRetval = merge(lRetval, {postcomment:post});
                    }
                */
                return lRetval;
            },
        peg$c1 = function(o) {return {options:o}},
        peg$c2 = function(e) {return {entities:e}},
        peg$c3 = function(a) {return {arcs:a}},
        peg$c4 = ",",
        peg$c5 = { type: "literal", value: ",", description: "\",\"" },
        peg$c6 = function(o) {return o},
        peg$c7 = ";",
        peg$c8 = { type: "literal", value: ";", description: "\";\"" },
        peg$c9 = function(options) {
              return optionArray2Object(options);
            },
        peg$c10 = "hscale",
        peg$c11 = { type: "literal", value: "hscale", description: "\"hscale\"" },
        peg$c12 = "arcgradient",
        peg$c13 = { type: "literal", value: "arcgradient", description: "\"arcgradient\"" },
        peg$c14 = "=",
        peg$c15 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c16 = function(name, value) {
                    return nameValue2Option(name, value);
                },
        peg$c17 = "width",
        peg$c18 = { type: "literal", value: "width", description: "\"width\"" },
        peg$c19 = "wordwraparcs",
        peg$c20 = { type: "literal", value: "wordwraparcs", description: "\"wordwraparcs\"" },
        peg$c21 = function(name, value) {
                    var lOption = {};
                    lOption[name.toLowerCase()] = flattenBoolean(value);
                    return lOption;
                },
        peg$c22 = "watermark",
        peg$c23 = { type: "literal", value: "watermark", description: "\"watermark\"" },
        peg$c24 = function(e) {return e},
        peg$c25 = function(el) {
              el[0].push(el[1]);
              return el[0];
            },
        peg$c26 = { type: "other", description: "entity" },
        peg$c27 = ":",
        peg$c28 = { type: "literal", value: ":", description: "\":\"" },
        peg$c29 = function(name, l) {return l},
        peg$c30 = function(name, label) {
              var lEntity = {};
              lEntity.name = name;
              if (!!label) {
                lEntity.label = label;
              }
              return lEntity;
            },
        peg$c31 = function(a) {return a},
        peg$c32 = function(a) {return [a]},
        peg$c33 = function(al) {
               al[0].push(al[1][0]);

               return al[0];
            },
        peg$c34 = function(sa) {return sa},
        peg$c35 = function(da) {return da},
        peg$c36 = function(ca) {return ca},
        peg$c37 = function(ra, s) {return s},
        peg$c38 = function(ra, label) {
              if (label) {
                ra.label = label;
              }
              return ra;
            },
        peg$c39 = function(kind) {return {kind:kind}},
        peg$c40 = function(from, kind, to) {return {kind: kind, from:from, to:to}},
        peg$c41 = "*",
        peg$c42 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c43 = function(kind, to) {return {kind:kind, from: "*", to:to}},
        peg$c44 = function(from, kind) {return {kind:kind, from: from, to: "*"}},
        peg$c45 = function(from, kind, to, s) {return s},
        peg$c46 = "{",
        peg$c47 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c48 = "}",
        peg$c49 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c50 = function(from, kind, to, label, arcs) {
                var retval = {kind: kind, from:from, to:to, arcs:arcs};
                if (label) {
                  retval.label = label;
                }
                return retval;
              },
        peg$c51 = "|||",
        peg$c52 = { type: "literal", value: "|||", description: "\"|||\"" },
        peg$c53 = "...",
        peg$c54 = { type: "literal", value: "...", description: "\"...\"" },
        peg$c55 = "---",
        peg$c56 = { type: "literal", value: "---", description: "\"---\"" },
        peg$c57 = function(kind) {
                return kind.toLowerCase();
            },
        peg$c58 = { type: "other", description: "bi-directional arrow" },
        peg$c59 = "--",
        peg$c60 = { type: "literal", value: "--", description: "\"--\"" },
        peg$c61 = "<->",
        peg$c62 = { type: "literal", value: "<->", description: "\"<->\"" },
        peg$c63 = "==",
        peg$c64 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c65 = "<<=>>",
        peg$c66 = { type: "literal", value: "<<=>>", description: "\"<<=>>\"" },
        peg$c67 = "<=>",
        peg$c68 = { type: "literal", value: "<=>", description: "\"<=>\"" },
        peg$c69 = "..",
        peg$c70 = { type: "literal", value: "..", description: "\"..\"" },
        peg$c71 = "<<>>",
        peg$c72 = { type: "literal", value: "<<>>", description: "\"<<>>\"" },
        peg$c73 = "::",
        peg$c74 = { type: "literal", value: "::", description: "\"::\"" },
        peg$c75 = "<:>",
        peg$c76 = { type: "literal", value: "<:>", description: "\"<:>\"" },
        peg$c77 = { type: "other", description: "left to right arrow" },
        peg$c78 = "->",
        peg$c79 = { type: "literal", value: "->", description: "\"->\"" },
        peg$c80 = "=>>",
        peg$c81 = { type: "literal", value: "=>>", description: "\"=>>\"" },
        peg$c82 = "=>",
        peg$c83 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c84 = ">>",
        peg$c85 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c86 = ":>",
        peg$c87 = { type: "literal", value: ":>", description: "\":>\"" },
        peg$c88 = "-x",
        peg$c89 = { type: "literal", value: "-x", description: "\"-x\"" },
        peg$c90 = { type: "other", description: "right to left arrow" },
        peg$c91 = "<-",
        peg$c92 = { type: "literal", value: "<-", description: "\"<-\"" },
        peg$c93 = "<<=",
        peg$c94 = { type: "literal", value: "<<=", description: "\"<<=\"" },
        peg$c95 = "<=",
        peg$c96 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c97 = "<<",
        peg$c98 = { type: "literal", value: "<<", description: "\"<<\"" },
        peg$c99 = "<:",
        peg$c100 = { type: "literal", value: "<:", description: "\"<:\"" },
        peg$c101 = "x-",
        peg$c102 = { type: "literal", value: "x-", description: "\"x-\"" },
        peg$c103 = { type: "other", description: "box" },
        peg$c104 = "note",
        peg$c105 = { type: "literal", value: "note", description: "\"note\"" },
        peg$c106 = "abox",
        peg$c107 = { type: "literal", value: "abox", description: "\"abox\"" },
        peg$c108 = "rbox",
        peg$c109 = { type: "literal", value: "rbox", description: "\"rbox\"" },
        peg$c110 = "box",
        peg$c111 = { type: "literal", value: "box", description: "\"box\"" },
        peg$c112 = { type: "other", description: "inline expression" },
        peg$c113 = "alt",
        peg$c114 = { type: "literal", value: "alt", description: "\"alt\"" },
        peg$c115 = "else",
        peg$c116 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c117 = "opt",
        peg$c118 = { type: "literal", value: "opt", description: "\"opt\"" },
        peg$c119 = "break",
        peg$c120 = { type: "literal", value: "break", description: "\"break\"" },
        peg$c121 = "par",
        peg$c122 = { type: "literal", value: "par", description: "\"par\"" },
        peg$c123 = "seq",
        peg$c124 = { type: "literal", value: "seq", description: "\"seq\"" },
        peg$c125 = "strict",
        peg$c126 = { type: "literal", value: "strict", description: "\"strict\"" },
        peg$c127 = "neg",
        peg$c128 = { type: "literal", value: "neg", description: "\"neg\"" },
        peg$c129 = "critical",
        peg$c130 = { type: "literal", value: "critical", description: "\"critical\"" },
        peg$c131 = "ignore",
        peg$c132 = { type: "literal", value: "ignore", description: "\"ignore\"" },
        peg$c133 = "consider",
        peg$c134 = { type: "literal", value: "consider", description: "\"consider\"" },
        peg$c135 = "assert",
        peg$c136 = { type: "literal", value: "assert", description: "\"assert\"" },
        peg$c137 = "loop",
        peg$c138 = { type: "literal", value: "loop", description: "\"loop\"" },
        peg$c139 = "ref",
        peg$c140 = { type: "literal", value: "ref", description: "\"ref\"" },
        peg$c141 = "exc",
        peg$c142 = { type: "literal", value: "exc", description: "\"exc\"" },
        peg$c143 = function(kind) {
                return kind.toLowerCase()
            },
        peg$c144 = "\"",
        peg$c145 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c146 = function(s) {return s.join("")},
        peg$c147 = "\\\"",
        peg$c148 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c149 = { type: "any", description: "any character" },
        peg$c150 = function(c) {return c},
        peg$c151 = function(s) {return s.join("").trim()},
        peg$c152 = { type: "other", description: "identifier" },
        peg$c153 = /^[^;, "\t\n\r=\-><:{*]/,
        peg$c154 = { type: "class", value: "[^;, \\\"\\t\\n\\r=\\-><:\\{\\*]", description: "[^;, \\\"\\t\\n\\r=\\-><:\\{\\*]" },
        peg$c155 = function(letters) {return letters.join("")},
        peg$c156 = { type: "other", description: "whitespace" },
        peg$c157 = /^[ \t]/,
        peg$c158 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c159 = { type: "other", description: "lineend" },
        peg$c160 = /^[\r\n]/,
        peg$c161 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c162 = "/*",
        peg$c163 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c164 = "*/",
        peg$c165 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c166 = function(start, com, end) {
              return start + com.join("") + end
            },
        peg$c167 = "//",
        peg$c168 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c169 = "#",
        peg$c170 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c171 = /^[^\r\n]/,
        peg$c172 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c173 = function(start, com) {
              return start + com.join("")
            },
        peg$c174 = { type: "other", description: "comment" },
        peg$c175 = { type: "other", description: "number" },
        peg$c176 = function(s) { return s; },
        peg$c177 = function(i) { return i.toString(); },
        peg$c178 = function(s) { return s.toString(); },
        peg$c179 = { type: "other", description: "cardinal" },
        peg$c180 = /^[0-9]/,
        peg$c181 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c182 = function(digits) { return parseInt(digits.join(""), 10); },
        peg$c183 = { type: "other", description: "real" },
        peg$c184 = ".",
        peg$c185 = { type: "literal", value: ".", description: "\".\"" },
        peg$c186 = function(digits) { return parseFloat(digits.join("")); },
        peg$c187 = { type: "other", description: "boolean" },
        peg$c188 = function(bs) {return bs;},
        peg$c189 = function(b) {return b.toString();},
        peg$c190 = "true",
        peg$c191 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c192 = "false",
        peg$c193 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c194 = "on",
        peg$c195 = { type: "literal", value: "on", description: "\"on\"" },
        peg$c196 = "off",
        peg$c197 = { type: "literal", value: "off", description: "\"off\"" },
        peg$c198 = "0",
        peg$c199 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c200 = "1",
        peg$c201 = { type: "literal", value: "1", description: "\"1\"" },
        peg$c202 = { type: "other", description: "size" },
        peg$c203 = function(n) {return n.toString(); },
        peg$c204 = "auto",
        peg$c205 = { type: "literal", value: "auto", description: "\"auto\"" },
        peg$c206 = function(s) {return s.toLowerCase(); },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsedeclarationlist();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s1, s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsedeclarationlist() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseoptionlist();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c1(s2);
      }
      s1 = s2;
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseentitylist();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s2;
          s3 = peg$c2(s3);
        }
        s2 = s3;
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parsearclist();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c3(s4);
          }
          s3 = s4;
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseoptionlist() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseoption();
      if (s4 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s5 = peg$c4;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c6(s4);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseoption();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c4;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c6(s4);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = peg$parseoption();
        if (s4 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 59) {
            s5 = peg$c7;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c8); }
          }
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c6(s4);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c9(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseoption() {
      var s0, s1, s2, s3, s4, s5, s6, s7;
